20160930 Bluetooth2.0練習(新增判斷被掃描的裝置是否已經在資料裡面，以及增加藍芽裝置可被搜尋)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,11 @@
         android:layout_height="wrap_content"
         android:text="QueryingPaired"
         android:onClick="scanPaired"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="讓藍芽裝置可被搜尋"
+        android:onClick="enableDiscoverability"/>
     <ListView
         android:id="@+id/listDevices"
         android:layout_width="match_parent"
